--- a/static_html/css/style.css
+++ b/static_html/css/style.css
@@ -97,7 +97,7 @@ main {
 	font-size: 28px;
 }
 
-#map {
+#map_pic {
 	width: 100%;
 	padding: 5% 0;
 }
@@ -140,7 +140,7 @@ main {
     border-collapse: collapse;
     width: 100%;
 	max-width: 900px;
-	margin: auto;
+	margin: 40px auto;
 }
 
 .entity_table td, .entity_table th {
@@ -156,7 +156,7 @@ main {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #60aedc;
+    background-color: #51dcba;
     color: white;
 }
 
@@ -168,7 +168,7 @@ form {
 
 select {
     width: 200px;
-	margin: 20px 0px 50px;
+	margin-top: 20px;
     padding: 16px 20px;
     border: none;
     border-radius: 4px;
@@ -186,4 +186,17 @@ input[type=text] {
     background-position: 10px 10px; 
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
+}
+
+.centered-text {
+	max-width: 900px;
+	margin: auto;
+	font-size: 22px;
+}
+
+#map {
+    height: 400px;  /* The height is 400 pixels */
+    width: 100%;  /* The width is the width of the web page */
+	max-width: 900px;
+	margin: auto;
 }
