--- a/dev-server/app/templates/pages/index.hbs
+++ b/dev-server/app/templates/pages/index.hbs
@@ -1,5 +1,5 @@
 {{> html/start title="T-shipping" settings=settings }}
-<div class="login"><a href="">Sign in</a></div>
+<div class="login"><a href="/login">Sign in</a></div>
 {{> html/header }}
     <main>
 	<section class="content clearfix">
