--- a/dev-server/app/templates/pages/nested/find.hbs
+++ b/dev-server/app/templates/pages/nested/find.hbs
@@ -4,7 +4,7 @@
 	<section class="content clearfix">
 		<h2>Find a route</h2>
 		<form>
-		  <input type="text" name="search" placeholder="Search..">
+		  <input type="text" name="search" id="find" placeholder="Search..">
 		</form>
 	</section>
 	</main>
