--- a/dev-server/app/templates/pages/nested/stops.hbs
+++ b/dev-server/app/templates/pages/nested/stops.hbs
@@ -17,18 +17,18 @@
 			<th>Place</th>
 		  </tr>
 		  <tr>
-			<td><a href="/nested/stop_card">1</a></td>
-			<td><a href="/nested/route_card">66</a></td>
+			<td><a href="/nested/stop_card"><div class="td_link">1</div></a></td>
+			<td><a href="/nested/route_card"><div class="td_link">66</div></a></td>
 			<td>Saint Petersburg</td>
 		  </tr>
 		  <tr>
-			<td><a href="/nested/stop_card">2</a></td>
-			<td><a href="/nested/route_card">66</a></td>
+			<td><a href="/nested/stop_card"><div class="td_link">2</div></a></td>
+			<td><a href="/nested/route_card"><div class="td_link">66</div></a></td>
 			<td>Kopenhagen</td>
 		  </tr>
 		  <tr>
-			<td><a href="/nested/stop_card">3</a></td>
-			<td><a href="/nested/route_card">66</a></td>
+			<td><a href="/nested/stop_card"><div class="td_link">3</div></a></td>
+			<td><a href="/nested/route_card"><div class="td_link">66</div></a></td>
 			<td>New York</td>
 		  </tr>
 		</table>
