--- a/dev-server/app/templates/pages/nested/transport.hbs
+++ b/dev-server/app/templates/pages/nested/transport.hbs
@@ -18,9 +18,9 @@
 			<th>Number of places</th>
 		  </tr>
 		  <tr>
-			<td><a href="/nested/transport_card">100</a></td>
+			<td><a href="/nested/transport_card"><div class="td_link">100</div></a></td>
 			<td>Ship</td>
-			<td><a href="/nested/route_card">66</a></td>
+			<td><a href="/nested/route_card"><div class="td_link">66</div></a></td>
 			<td>1000</td>
 		  </tr>
 		</table>
