--- a/dev-server/app/templates/pages/nested/transport_card.hbs
+++ b/dev-server/app/templates/pages/nested/transport_card.hbs
@@ -13,21 +13,21 @@
 			<th>Departure</th>
 		  </tr>
 		  <tr>
-			<td><a href="/nested/stop_card">1</a></td>
+			<td><a href="/nested/stop_card"><div class="td_link">1</div></a></td>
 			<td>Saint-Petersburg</td>
 			<td>12:00</td>
 			<td>26 hours</td>
 			<td>14:00</td>
 		  </tr>
 		  <tr>
-			<td><a href="/nested/stop_card">2</a></td>
+			<td><a href="/nested/stop_card"><div class="td_link">2</div></a></td>
 			<td>Kopenhagen</td>
 			<td>12:00</td>
 			<td>15 hours</td>
 			<td>01:00</td>
 		  </tr>
 		  <tr>
-			<td><a href="/nested/stop_card">3</a></td>
+			<td><a href="/nested/stop_card"><div class="td_link">3</div></a></td>
 			<td>New York</td>
 			<td>17:00</td>
 			<td>26 hours</td>
