--- a/dev-server/app/static-assets/css/style.css
+++ b/dev-server/app/static-assets/css/style.css
@@ -44,15 +44,12 @@ main {
   width: 100%;
 }
 
-#nav-bar {
+nav {
+	margin: auto;
+	display: inline-block;
 	width: 100%;
 	padding-top: 30px;
 	text-align: center;
-}
-
-#nav {
-	margin: auto;
-	display: inline-block;
 }
 
 .nav-item {
