--- a/dev-server/app/templates/partials/html/header.hbs
+++ b/dev-server/app/templates/partials/html/header.hbs
@@ -1,11 +1,9 @@
 	<header>
-      <a href="/"><div class="name"><h1>T-Shipping</h1></div></a>
-	  <div id="nav-bar">
-		<div id="nav">
+      <div class="name"><h1><a href="/">T-Shipping</a></h1></div>
+		<nav>
 			<a href="/nested/transport" class="nav-item">transport</a>
 			<a href="/nested/stops" class="nav-item">stops</a>
   			<a href="/nested/routes" class="nav-item">routes</a>
   			<a href="/nested/find" class="nav-item">find a route</a>
-		</div>
-	  </div>
+		</nav>
     </header>
