--- a/dev-server/app/templates/pages/nested/route_card.hbs
+++ b/dev-server/app/templates/pages/nested/route_card.hbs
@@ -11,17 +11,17 @@
 			<th>Duration</th>
 		  </tr>
 		  <tr>
-			<td><a href="/nested/stop_card"><div class="td_link">1</div></a></td>
+			<td><a href="/nested/stop_card">1</a></td>
 			<td>Saint-Petersburg</td>
 			<td> - </td>
 		  </tr>
 		  <tr>
-			<td><a href="/nested/stop_card"><div class="td_link">2</div></a></td>
+			<td><a href="/nested/stop_card">2</a></td>
 			<td>Kopenhagen</td>
 			<td>15 hours</td>
 		  </tr>
 		  <tr>
-			<td><a href="/nested/stop_card"><div class="td_link">3</div></a></td>
+			<td><a href="/nested/stop_card">3</a></td>
 			<td>New York</td>
 			<td> - </td>
 		  </tr>
