--- a/dev-server/app/templates/pages/nested/routes.hbs
+++ b/dev-server/app/templates/pages/nested/routes.hbs
@@ -10,27 +10,27 @@
 			<th>To</th>
 		  </tr>
 		  <tr>
-			<td><a href="/nested/route_card"><div class="td_link">66</div></a></td>
+			<td><a href="/nested/route_card">66</a></td>
 			<td>Saint-Petersburg</td>
 			<td>New York</td>
 		  </tr>
 		  <tr>
-			<td><a href="/nested/route_card"><div class="td_link">66</div></a></td>
+			<td><a href="/nested/route_card">66</a></td>
 			<td>Saint-Petersburg</td>
 			<td>New York</td>
 		  </tr>
 		  <tr>
-			<td><a href="/nested/route_card"><div class="td_link">66</div></a></td>
+			<td><a href="/nested/route_card">66</a></td>
 			<td>Saint-Petersburg</td>
 			<td>New York</td>
 		  </tr>
 		  <tr>
-			<td><a href="/nested/route_card"><div class="td_link">66</div></a></td>
+			<td><a href="/nested/route_card">66</a></td>
 			<td>Saint-Petersburg</td>
 			<td>New York</td>
 		  </tr>
 		  <tr>
-			<td><a href="/nested/route_card"><div class="td_link">66</div></a></td>
+			<td><a href="/nested/route_card">66</a></td>
 			<td>Saint-Petersburg</td>
 			<td>New York</td>
 		  </tr>
