--- a/dev-server/app/templates/pages/nested/stop_card.hbs
+++ b/dev-server/app/templates/pages/nested/stop_card.hbs
@@ -13,15 +13,15 @@
 			<th>Departure</th>
 		  </tr>
 		  <tr>
-			<td><a href="/nested/route_card"><div class="td_link">66</div></a></td>
-			<td><a href="/nested/transport_card"><div class="td_link">100</div></a></td>
+			<td><a href="/nested/route_card">66</a></td>
+			<td><a href="/nested/transport_card">100</a></td>
 			<td>Ship</td>
 			<td> - </td>
 			<td>14:00</td>
 		  </tr>
 		  <tr>
-			<td><a href="/nested/route_card"><div class="td_link">66</div></a></td>
-			<td><a href="/nested/transport_card"><div class="td_link">100</div></a></td>
+			<td><a href="/nested/route_card">66</a></td>
+			<td><a href="/nested/transport_card">100</a></td>
 			<td>Ship</td>
 			<td> - </td>
 			<td>14:00</td>
