--- a/dev-server/app/templates/pages/index.hbs
+++ b/dev-server/app/templates/pages/index.hbs
@@ -2,13 +2,36 @@
 <div class="login"><a href="/login">Sign in</a></div>
 {{> html/header }}
     <main>
-	<section class="content clearfix">
-		<h2>We are the most awesome shipping company in the world!</h2>
-		<p class="simple-text toleft">We deliver everything you want wherever you want!
-		</p>
-		<img src="/static-assets/images/1.jpg" id="map_pic">
-		<p class="simple-text toleft">The easiest way to organise shipping!</p>
-		<a href="/nested/find"><p class="super-but proj-but">find a route</p></a>
+	<section class="content clearfix" id="index-section">
+		<div class="substrate">
+		<h2>Find a route</h2>
+		<form id="find-a-route-form">
+		<div class="flex-container">
+		  <div>
+			  <label for="stopA">From:</label>
+			  <select id="sorting" name="places">
+				<option value="number">Stop 1</option>
+				<option value="places">Stop 2</option>
+				<option value="places">Stop 3</option>
+			  </select>
+		  </div>
+		  <div>
+			  <label for="stopB">To:</label>
+			  <select id="sorting" name="places">
+				<option value="number">Stop 1</option>
+				<option value="places">Stop 2</option>
+				<option value="places">Stop 3</option>
+			  </select>
+		  </div>
+		  <div>
+			  <label for="find-a-route-time">Time:</label>
+			  <input type="time" name="from_time" min="05:00" max="23:30" value="06:00"/>
+			  <input type="time" name="till_time" min="05:00" max="23:30" value="23:30"/>
+		  </div>  
+		</div>
+		<input type="submit" value="Find" id="find-a-route-button">
+		</form>
+		</div>
 	</section>
 	</main>
 	
