--- a/dev-server/app/templates/partials/html/header.hbs
+++ b/dev-server/app/templates/partials/html/header.hbs
@@ -1,9 +1,8 @@
 	<header>
-      <div class="name"><h1><a href="/">T-Shipping</a></h1></div>
+      <h1><a href="/">T-Shipping</a></h1>
 		<nav>
 			<a href="/nested/transport" class="nav-item">transport</a>
 			<a href="/nested/stops" class="nav-item">stops</a>
   			<a href="/nested/routes" class="nav-item">routes</a>
-  			<a href="/nested/find" class="nav-item">find a route</a>
 		</nav>
     </header>
