--- a/dev-server/app/templates/pages/nested/routes.hbs
+++ b/dev-server/app/templates/pages/nested/routes.hbs
@@ -34,7 +34,21 @@
 			<td>Saint-Petersburg</td>
 			<td>New York</td>
 		  </tr>
+		  <tr>
+			<td><a href="/nested/route_card">66</a></td>
+			<td>Saint-Petersburg</td>
+			<td>New York</td>
+		  </tr>
 		</table>
+		<div class="pagination-centering">
+		  <div class="pagination">
+			<a href="#">&laquo;</a>
+			<a href="#" class="active">1</a>
+			<a href="#">2</a>
+			<a href="#">3</a>
+			<a href="#">&raquo;</a>
+		  </div>
+		</div>
 	</section>
 	</main>
 	
