--- a/dev-server/app/templates/pages/nested/stops.hbs
+++ b/dev-server/app/templates/pages/nested/stops.hbs
@@ -51,7 +51,32 @@
 			<td><a href="/nested/route_card">66</a></td>
 			<td>New York</td>
 		  </tr>
+		  
+		  <tr>
+			<td><a href="/nested/stop_card">1</a></td>
+			<td><a href="/nested/route_card">66</a></td>
+			<td>Saint Petersburg</td>
+		  </tr>
+		  <tr>
+			<td><a href="/nested/stop_card">2</a></td>
+			<td><a href="/nested/route_card">66</a></td>
+			<td>Kopenhagen</td>
+		  </tr>
+		  <tr>
+			<td><a href="/nested/stop_card">3</a></td>
+			<td><a href="/nested/route_card">66</a></td>
+			<td>New York</td>
+		  </tr>
 		</table>
+		<div class="pagination-centering">
+		  <div class="pagination">
+			<a href="#">&laquo;</a>
+			<a href="#" class="active">1</a>
+			<a href="#">2</a>
+			<a href="#">3</a>
+			<a href="#">&raquo;</a>
+		  </div>
+		</div>
 		
 	<!-- Google Maps -->
 	<div id="map"></div>
