--- a/dev-server/app/templates/pages/nested/transport.hbs
+++ b/dev-server/app/templates/pages/nested/transport.hbs
@@ -43,7 +43,48 @@
 			<td><a href="/nested/route_card">66</a></td>
 			<td>1000</td>
 		  </tr>
+		  <tr>
+			<td><a href="/nested/transport_card">100</a></td>
+			<td>Ship</td>
+			<td><a href="/nested/route_card">66</a></td>
+			<td>1000</td>
+		  </tr>
+		  <tr>
+			<td><a href="/nested/transport_card">100</a></td>
+			<td>Ship</td>
+			<td><a href="/nested/route_card">66</a></td>
+			<td>1000</td>
+		  </tr>
+		  <tr>
+			<td><a href="/nested/transport_card">100</a></td>
+			<td>Ship</td>
+			<td><a href="/nested/route_card">66</a></td>
+			<td>1000</td>
+		  </tr>
+		  <tr>
+			<td><a href="/nested/transport_card">100</a></td>
+			<td>Ship</td>
+			<td><a href="/nested/route_card">66</a></td>
+			<td>1000</td>
+		  </tr>
+		  <tr>
+			<td><a href="/nested/transport_card">100</a></td>
+			<td>Ship</td>
+			<td><a href="/nested/route_card">66</a></td>
+			<td>1000</td>
+		  </tr>
 		</table>
+		
+		<div class="pagination-centering">
+		  <div class="pagination">
+			<a href="#">&laquo;</a>
+			<a href="#" class="active">1</a>
+			<a href="#">2</a>
+			<a href="#">3</a>
+			<a href="#">&raquo;</a>
+		  </div>
+		</div>
+		
 	</section>
 	</main>
 	
