--- a/dev-server/app/static-assets/css/style.css
+++ b/dev-server/app/static-assets/css/style.css
@@ -224,3 +224,30 @@ footer > div {
   color: #666;
   font-size: 16px;
 }
+
+.pagination-centering {
+    text-align: center;
+    margin: 40px 0;
+}
+
+.pagination {
+    display: inline-block;
+}
+
+.pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+    border: 1px solid #ddd;
+    margin: 0 4px;
+}
+
+.pagination a.active {
+    background-color: #51dcba;
+    color: white;
+    border: 1px solid #51dcba;
+}
+
+.pagination a:hover:not(.active) {background-color: #ddd;}
