--- a/dev-server/app/static-assets/css/style_old.css
+++ b/dev-server/app/static-assets/css/style_old.css
@@ -42,22 +42,85 @@ main {
 
 nav {
 	margin: auto;
-	display: inline-block;
 	width: 100%;
 	padding-top: 30px;
 	text-align: center;
 }
 
 .nav-item {
-    margin: 4px 30px;
+    margin: 10px 30px 0;
     font-size: 16px;
     font-weight: 500;
     text-transform: uppercase;
+	display: inline-block;
 }
 
 .nav-item:hover {
 	color: #bbb;
 }
+
+/*
+
+#burger {
+	display: none;
+}
+
+@media screen and (max-width: 450px) {
+    .nav-item {
+        display: none;
+    }
+	nav {
+		padding-top: 0;
+	}
+	#burger {
+		display: block;
+		text-align: left;
+	}
+	header {
+		padding: 25px 25px 0 0;
+	}
+	header h1 {
+		padding-left: 25px;
+	}
+}
+
+.ham {
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  transition: transform 400ms;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.hamRotate.active {
+  transform: rotate(45deg);
+}
+.hamRotate180.active {
+  transform: rotate(180deg);
+}
+.line {
+  fill:none;
+  transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+  stroke:#000;
+  stroke-width:5.5;
+  stroke-linecap:round;
+}
+.ham5 .top {
+  stroke-dasharray: 40 82;
+}
+.ham5 .bottom {
+  stroke-dasharray: 40 82;
+}
+.ham5.active .top {
+  stroke-dasharray: 14 82;
+  stroke-dashoffset: -72px;
+}
+.ham5.active .bottom {
+  stroke-dasharray: 14 82;
+  stroke-dashoffset: -72px;
+}
+*/
 
 .login {
 	position: absolute;
@@ -141,7 +204,7 @@ td a {
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid #ccc;
+    border: 1px solid #ddd;
     border-radius: 4px;
     box-sizing: border-box;
 }
@@ -194,6 +257,7 @@ input[type=submit]:hover {
 	max-width: 1000px;
     background: rgba(255,255,255,0.8);
 	margin: auto;
+	padding: 20px;
 }
 
 #find-a-route-form {
