--- a/dev-server/app/static-assets/sass/_variables.scss
+++ b/dev-server/app/static-assets/sass/_variables.scss
@@ -1,3 +1,6 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic);
+@import url('https://fonts.googleapis.com/css?family=Crete+Round|Roboto+Slab');
+
 $simple-font: 'Open Sans Condensed', Helvetica, Arial, sans-serif;
 $title-font: 'Roboto Slab', serif;
 $entity-table-font: "Trebuchet MS", Arial, Helvetica, sans-serif;
@@ -16,3 +19,4 @@ $special-color: #51dcba;
 $bg-image-url: url(/static-assets/images/1.jpg);
 
 $substrate-bg-color: rgba(255,255,255,0.8);
+
