--- a/dev-server/app/templates/pages/nested/stops.hbs
+++ b/dev-server/app/templates/pages/nested/stops.hbs
@@ -1,4 +1,4 @@
-{{> html/start title="T-shipping - Transport" settings=settings }}
+{{> html/start title="T-shipping - Stops" settings=settings }}
 {{> html/header }}
     <main>
 	<section class="content clearfix">
@@ -108,4 +108,5 @@
 	</section>
 	</main>
 	
+{{> html/footer }}
 {{> html/end }}
