--- a/dev-server/app/static-assets/css/styles.css
+++ b/dev-server/app/static-assets/css/styles.css
@@ -1,14 +1,14 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic);
-@import url("https://fonts.googleapis.com/css?family=Crete+Round|Roboto+Slab");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab");
 nav {
   margin: auto;
   width: 100%;
-  padding-top: 30px;
+  padding-top: 20px;
   text-align: center;
 }
 
 .nav-item {
-  margin: 10px 30px 0;
+  margin: 0 30px;
   font-size: 16px;
   font-weight: 500;
   text-transform: uppercase;
@@ -32,7 +32,7 @@ footer {
 
 header {
   z-index: 6;
-  padding: 25px;
+  padding: 15px;
 }
 header h1 {
   font-family: "Roboto Slab", serif;
@@ -43,12 +43,7 @@ header h1 {
 }
 
 footer {
-  padding: 0 0 20px;
-}
-footer > div {
-  width: 148px;
-  margin: 50px auto;
-  display: block;
+  padding: 20px;
 }
 
 .entity_table {
@@ -120,7 +115,7 @@ td a {
 
 #index-section {
   background: url(/static-assets/images/1.jpg) no-repeat center center;
-  min-height: 500px;
+  min-height: 480px;
   padding-top: 5%;
 }
 
@@ -130,19 +125,32 @@ td a {
   max-width: 1000px;
   background: rgba(255, 255, 255, 0.8);
   margin: auto;
-  padding: 20px;
+  padding: 0 20px;
 }
 
 #find-a-route-form {
   font-size: 1.2em;
   font-weight: bold;
 }
+#find-a-route-form select, #find-a-route-form input[type=time] {
+  border: 2px solid #309fca;
+}
 
 #find-a-route-button {
+  width: 100%;
   max-width: 340px;
   min-width: 200px;
   margin: 10px auto;
   display: block;
+  background-color: #51dcba;
+  border: 2px solid #2ad0a7;
+  color: white;
+  padding: 14px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+#find-a-route-button:hover {
+  background-color: #2ad0a7;
 }
 
 #login, #pass {
@@ -169,8 +177,8 @@ td a {
 }
 *, *:before, *:after {
   -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+  -webkit-box-sizing--moz-box-sizing: border-box;
+  -webkit-box-sizing--moz-box-sizing-box-sizing: border-box;
 }
 
 .clearfix:after {
@@ -208,6 +216,104 @@ textarea {
   font: inherit;
 }
 
+.knobs, .layer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.button {
+  width: 74px;
+  height: 36px;
+  margin: auto;
+  overflow: hidden;
+  display: inline-block;
+}
+
+.button.r, .button.r .layer {
+  border-radius: 100px;
+}
+
+#crossing-routes-toggle {
+  text-align: center;
+}
+
+.checkbox {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  opacity: 0;
+  cursor: pointer;
+  z-index: 3;
+}
+
+.knobs {
+  z-index: 2;
+}
+
+.layer {
+  width: 100%;
+  background-color: #d0f6ed;
+  transition: 0.3s ease all;
+  z-index: 1;
+}
+
+#button-9 .knobs:before, #button-9 .knobs:after, #button-9 .knobs span {
+  position: absolute;
+  top: 4px;
+  width: 28px;
+  height: 28px;
+  font-size: 10px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 1;
+  padding: 9px 4px;
+  border-radius: 50%;
+  transition: 0.4s cubic-bezier(0.18, 0.89, 0.35, 1.15) all;
+}
+
+#button-9 .knobs:before {
+  content: "YES";
+  left: 4px;
+}
+
+#button-9 .knobs:after {
+  content: "NO";
+  right: -24px;
+}
+
+#button-9 .knobs:before, #button-9 .knobs:after {
+  color: #fff;
+  z-index: 2;
+}
+
+#button-9 .knobs span {
+  left: 4px;
+  background-color: #51dcba;
+  z-index: 1;
+}
+
+#button-9 .checkbox:checked + .knobs:before {
+  left: -24px;
+}
+
+#button-9 .checkbox:checked + .knobs:after {
+  right: 4px;
+}
+
+#button-9 .checkbox:checked + .knobs span {
+  left: 42px;
+  background-color: #F44336;
+}
+
+#button-9 .checkbox:checked ~ .layer {
+  background-color: #fcebeb;
+}
+
 .flex-container, form, #map {
   width: 100%;
   max-width: 900px;
@@ -220,11 +326,11 @@ main {
 
 .content {
   width: 100%;
-  padding: 0 10% 3% 10%;
+  padding: 0 10%;
   background: linear-gradient(to top, #edeae6, #f8f6f5);
 }
 .content h2 {
-  padding: 36px 0;
+  padding: 28px 0;
   font-size: 36px;
   font-weight: 400;
   text-align: center;
@@ -247,23 +353,13 @@ main {
 select, input[type=time] {
   width: 100%;
   margin-top: 20px;
-  padding: 16px 20px;
-  border: none;
+  padding: 10px 20px;
+  border: 2px solid #ddd;
   border-radius: 4px;
+  opacity: 0.8;
 }
-
-input[type=submit] {
-  width: 100%;
-  background-color: #51dcba;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-input[type=submit]:hover {
-  background-color: #26bb96;
+select:hover, input[type=time]:hover {
+  opacity: 1;
 }
 
 .flex-container {
@@ -276,6 +372,11 @@ input[type=submit]:hover {
 .flex-container > div {
   width: 250px;
   margin: 10px auto;
+}
+
+label {
+  font-size: 22px;
+  margin-right: 20px;
 }
 
 .copyright {
