--- a/dev-server/app/templates/pages/nested/route_card.hbs
+++ b/dev-server/app/templates/pages/nested/route_card.hbs
@@ -1,4 +1,4 @@
-{{> html/start title="T-shipping - Transport" settings=settings }}
+{{> html/start title="T-shipping - Route" settings=settings }}
 {{> html/header }}
 	<main>
 	<section class="content clearfix">
@@ -57,4 +57,5 @@
 	</section>
 	</main>
 	
+{{> html/footer }}
 {{> html/end }}
