--- a/dev-server/app/templates/pages/nested/stop_card.hbs
+++ b/dev-server/app/templates/pages/nested/stop_card.hbs
@@ -1,4 +1,4 @@
-{{> html/start title="T-shipping - Transport" settings=settings }}
+{{> html/start title="T-shipping - Stop" settings=settings }}
 {{> html/header }}
     <main>
 	<section class="content clearfix">
@@ -50,4 +50,5 @@
 	</section>
 	</main>
 	
+{{> html/footer }}
 {{> html/end }}
