--- a/dev-server/app/templates/partials/head.hbs
+++ b/dev-server/app/templates/partials/head.hbs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>{{ title }}</title>
     <link rel="stylesheet" href="/static-assets/css/styles.css">
+	<link rel="shortcut icon" type="image/png" href="/static-assets/images/favicon.png" id="favicon" />
     <script>
         (function () {
             const port = 'ws://localhost:{{ port }}';
