--- a/dev-server/app/static-assets/sass/style.sass
+++ b/dev-server/app/static-assets/sass/style.sass
@@ -1,13 +1,17 @@
 @import variables
-@import navigation
+@import header-style
+@import index-style
+@import navigation-menu
+
 @import page-pieces
 @import tables
-@import login-link
 @import pagination
 @import find-a-route-section
 @import login-form
 @import bases
-@import crossing-routes-toggle
+@import day-night-toggle
+@import find-field
+@import sign-in-button
 
 %centered-and-limited
   width: 100%
