--- a/dev-server/app/static-assets/css/styles.css
+++ b/dev-server/app/static-assets/css/styles.css
@@ -1,45 +1,175 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic);
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab");
-nav {
-  margin: auto;
-  width: 100%;
-  padding-top: 20px;
-  text-align: center;
-}
-
-.nav-item {
-  margin: 0 30px;
-  font-size: 16px;
-  font-weight: 500;
-  text-transform: uppercase;
-  display: inline-block;
-}
-.nav-item:hover {
-  color: #bbb;
-}
-
-body {
-  font-family: "Open Sans Condensed", Helvetica, Arial, sans-serif;
-  font-weight: 300;
-  background: #edeae6;
-  min-width: 300px;
-}
-
-header,
-footer {
-  width: 100%;
-}
-
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import url("https://fonts.googleapis.com/css?family=Ubuntu+Mono:700");
 header {
-  z-index: 6;
-  padding: 15px;
+  width: 100%;
+  z-index: 5;
+  background-image: linear-gradient(#fff7ed, #f1e6d9, #d6c8b7);
+  padding: 5px 20px;
+  border-radius: 0 0 25px 10px;
 }
 header h1 {
   font-family: "Roboto Slab", serif;
   color: #333;
   font-size: 42px;
   font-weight: 400;
+  text-rendering: optimizeLegibility;
+}
+
+.drop-shadow {
+  text-shadow: -1px 1px rgba(140, 140, 140, 0.9), -2px 2px rgba(140, 140, 140, 0.8), -3px 3px rgba(140, 140, 140, 0.7), -4px 4px rgba(140, 140, 140, 0.6), -5px 5px rgba(140, 140, 140, 0.5), -6px 6px rgba(140, 140, 140, 0.4), -7px 7px rgba(140, 140, 140, 0.3), -8px 8px rgba(140, 140, 140, 0.2), -9px 9px rgba(140, 140, 140, 0.1), -10px 10px rgba(140, 140, 140, 0), -11px 11px rgba(140, 140, 140, 0), -12px 12px rgba(140, 140, 140, 0), -13px 13px rgba(140, 140, 140, 0), -14px 14px rgba(140, 140, 140, 0), -15px 15px rgba(140, 140, 140, 0), -16px 16px rgba(140, 140, 140, 0), -17px 17px rgba(140, 140, 140, 0), -18px 18px rgba(140, 140, 140, 0), -19px 19px rgba(140, 140, 140, 0), -20px 20px rgba(140, 140, 140, 0);
+}
+
+.site-name {
   text-align: center;
+}
+
+.find-field {
+  display: none;
+}
+
+.header-buttons {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-end;
+  height: 55px;
+  padding-bottom: 5px;
+}
+
+.day-night-toggle {
+  margin: 0;
+}
+
+@media (min-width: 460px) {
+  .header-container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .header-container > div {
+    height: 55px;
+  }
+
+  .site-name {
+    width: 100%;
+    text-align: center;
+  }
+
+  .find-field {
+    min-width: 260px;
+    display: block;
+  }
+
+  .find-box {
+    display: table;
+  }
+
+  .header-buttons {
+    width: 140px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+
+  .day-night-toggle {
+    margin: 0;
+  }
+}
+@media (min-width: 760px) {
+  .header-container {
+    margin: auto;
+    max-width: 900px;
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: 220px 260px 200px;
+    justify-content: space-between;
+  }
+  .header-container > div {
+    height: 55px;
+  }
+  .header-container .header-buttons {
+    justify-content: space-between;
+  }
+}
+.main-section {
+  width: 100%;
+  max-width: 900px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#main-container {
+  padding: 10px 0;
+}
+
+.find-a-route-section {
+  background: url(/static-assets/images/1.jpg) no-repeat center center;
+  background-size: cover;
+  width: 100%;
+  min-width: 550px;
+  min-height: 550px;
+  border: solid 1px #2f3640;
+  border-radius: 5px;
+}
+
+#accessory-menu {
+  width: 175px;
+  padding: 10px;
+}
+
+#navigation-bar {
+  width: 175px;
+  padding: 10px;
+}
+
+nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-content: flex-start;
+  border: solid 1px #2f3640;
+  border-radius: 10px;
+  padding: 15px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-image: linear-gradient(to bottom right, #d6c8b7, #fff7ed);
+}
+
+.nav-item {
+  font-size: 22px;
+  font-family: "Ubuntu Mono", monospace;
+  color: #718197;
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-weight: 500;
+  background-color: #f1e6d9;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition: background-color 0.5s, box-shadow 0.1s, transform 0.1s;
+}
+.nav-item:hover {
+  color: #2f3640;
+  background-color: #eadac6;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2), 0 4px 15px 0 rgba(0, 0, 0, 0.19);
+  transform: translate(0, 1px);
+}
+.nav-item:active {
+  transform: translate(0, 3px);
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 6px 0 rgba(0, 0, 0, 0.19);
+}
+
+body {
+  font-family: "Open Sans Condensed", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  background: #f1e6d9;
+  min-width: 300px;
+}
+
+footer {
+  width: 100%;
 }
 
 footer {
@@ -77,16 +207,6 @@ td a {
   height: 100%;
 }
 
-.login {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  z-index: 10;
-}
-.login:hover {
-  color: #bbb;
-}
-
 .pagination-centering {
   text-align: center;
   margin: 40px 0;
@@ -115,6 +235,7 @@ td a {
 
 #index-section {
   background: url(/static-assets/images/1.jpg) no-repeat center center;
+  width: 100%;
   min-height: 480px;
   padding-top: 5%;
 }
@@ -126,6 +247,9 @@ td a {
   background: rgba(255, 255, 255, 0.8);
   margin: auto;
   padding: 0 20px;
+}
+.substrate table {
+  margin: 0 auto 20px;
 }
 
 #find-a-route-form {
@@ -140,7 +264,7 @@ td a {
   width: 100%;
   max-width: 340px;
   min-width: 200px;
-  margin: 10px auto;
+  margin: 20px auto;
   display: block;
   background-color: #51dcba;
   border: 2px solid #2ad0a7;
@@ -148,9 +272,14 @@ td a {
   padding: 14px 20px;
   border-radius: 4px;
   cursor: pointer;
+  text-align: center;
 }
 #find-a-route-button:hover {
   background-color: #2ad0a7;
+}
+
+#found-routes {
+  display: none;
 }
 
 #login, #pass {
@@ -200,11 +329,11 @@ html {
 a {
   background-color: transparent;
   cursor: pointer;
-  color: inherit;
+  color: #000;
 }
 a:active, a:hover, a:visited {
   outline: 0;
-  color: inherit;
+  color: #000;
 }
 
 button,
@@ -257,7 +386,7 @@ textarea {
 
 .layer {
   width: 100%;
-  background-color: #d0f6ed;
+  background-color: #5a687b;
   transition: 0.3s ease all;
   z-index: 1;
 }
@@ -277,23 +406,24 @@ textarea {
 }
 
 #button-9 .knobs:before {
-  content: "YES";
+  color: #fff;
+  content: "Day";
   left: 4px;
 }
 
 #button-9 .knobs:after {
-  content: "NO";
+  color: #2f3640;
+  content: "Night";
   right: -24px;
 }
 
 #button-9 .knobs:before, #button-9 .knobs:after {
-  color: #fff;
   z-index: 2;
 }
 
 #button-9 .knobs span {
   left: 4px;
-  background-color: #51dcba;
+  background-color: #2f3640;
   z-index: 1;
 }
 
@@ -307,11 +437,84 @@ textarea {
 
 #button-9 .checkbox:checked + .knobs span {
   left: 42px;
-  background-color: #F44336;
+  background-color: #f9f4ef;
 }
 
 #button-9 .checkbox:checked ~ .layer {
-  background-color: #fcebeb;
+  background-color: #ebdbca;
+}
+
+.find-box {
+  display: inline-block;
+  margin-top: 5px;
+  background: #2f3640;
+  border-radius: 40px;
+  padding: 3px;
+}
+.find-box:hover > .find-txt {
+  width: 200px;
+  padding: 0 10px;
+}
+.find-box:hover > .find-btn {
+  background: #f9f4ef;
+  color: black;
+}
+
+.find-btn {
+  color: #e84118;
+  float: right;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #2f3640;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.4s;
+  color: #f9f4ef;
+  cursor: pointer;
+}
+.find-btn > i {
+  font-size: 30px;
+}
+
+.find-txt {
+  border: none;
+  background: none;
+  outline: none;
+  padding: 0;
+  color: #f9f4ef;
+  font-size: 16px;
+  transition: 0.4s;
+  line-height: 40px;
+  width: 0px;
+  font-weight: bold;
+}
+
+.animate {
+  transition: all 0.1s;
+  -webkit-transition: all 0.1s;
+}
+
+.action-button {
+  position: relative;
+  padding: 5px 10px;
+  margin-top: 5px;
+  float: left;
+  border-radius: 10px;
+  font-size: 25px;
+  text-decoration: none;
+}
+.action-button:active {
+  border-bottom: 1px solid;
+}
+.action-button i {
+  color: #f9f4ef;
+}
+
+.blue {
+  background-color: #2f3640;
+  border-bottom: 5px solid #191d23;
 }
 
 .flex-container, form, #map {
@@ -327,7 +530,7 @@ main {
 .content {
   width: 100%;
   padding: 0 10%;
-  background: linear-gradient(to top, #edeae6, #f8f6f5);
+  background: linear-gradient(to top, #f1e6d9, #f8f6f5);
 }
 .content h2 {
   padding: 28px 0;
