--- a/dev-server/app/static-assets/sass/_variables.sass
+++ b/dev-server/app/static-assets/sass/_variables.sass
@@ -1,14 +1,14 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic)
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab')
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons')
+@import url('https://fonts.googleapis.com/css?family=Ubuntu+Mono:700')
 
 $simple-font: 'Open Sans Condensed', Helvetica, Arial, sans-serif
 $title-font: 'Roboto Slab', serif
 $entity-table-font: "Trebuchet MS", Arial, Helvetica, sans-serif
 
-
-$background-color: #edeae6
+$background-color: #f1e6d9
 $background-gradient-color-to: #f8f6f5
-$title-font-color: #333
 $table-highlight-color: #ddd
 $borders-color: #ddd
 $table-uneven-tr-color: #f2f2f2
@@ -21,3 +21,9 @@ $bg-image-url: url(/static-assets/images/1.jpg)
 
 $substrate-bg-color: rgba(255,255,255,0.8)
 
+$header-gradient-from: #fff7ed
+$header-middle-color: #f1e6d9
+$header-gradient-to: #d6c8b7
+$site-name-color: #333
+$header-main-color: #2f3640
+$header-alternative-color: #f9f4ef
