--- a/dev-server/app/templates/pages/index.hbs
+++ b/dev-server/app/templates/pages/index.hbs
@@ -1,39 +1,85 @@
 {{> html/start title="T-shipping" settings=settings }}
-<div class="login"><a href="/login">Sign in</a></div>
 {{> html/header }}
     <main>
-	<section class="content clearfix" id="index-section">
-		<div class="substrate">
-		<h2>Find a route</h2>
-		<form id="find-a-route-form">
-		<div class="flex-container">
-		  <div>
-			  <label for="stopA">From:</label>
-			  <select id="sorting" name="places">
-				<option value="number">Stop 1</option>
-				<option value="places">Stop 2</option>
-				<option value="places">Stop 3</option>
-			  </select>
-		  </div>
-		  <div>
-			  <label for="stopB">To:</label>
-			  <select id="sorting" name="places">
-				<option value="number">Stop 1</option>
-				<option value="places">Stop 2</option>
-				<option value="places">Stop 3</option>
-			  </select>
-		  </div>
-		  <div>
-			  <label for="find-a-route-time">Time:</label>
-			  <input type="time" name="from_time" min="05:00" max="23:30" value="06:00"/>
-			  <input type="time" name="till_time" min="05:00" max="23:30" value="23:30"/>
-		  </div>  
+	<div class="main-section">
+		<div id="navigation-bar">
+			<nav>
+				<a href="/nested/transport" class="nav-item">transport</a>
+				<a href="/nested/stops" class="nav-item">stops</a>
+				<a href="/nested/routes" class="nav-item">routes</a>
+			</nav>
 		</div>
-		<input type="submit" value="Find" id="find-a-route-button">
-		</form>
+		<div id="main-container">
+			<div class="find-a-route-section">
+
+			</div>
 		</div>
-	</section>
+		<div id="accessory-menu">
+			<nav>
+				<a href="/nested/transport" class="nav-item">transport</a>
+				<a href="/nested/stops" class="nav-item">stops</a>
+				<a href="/nested/routes" class="nav-item">routes</a>
+			</nav>
+		</div>
+	</div>
 	</main>
 	
 {{> html/footer }}
 {{> html/end }}
+
+<!--<section class="content clearfix" id="index-section">
+		<div class="substrate">
+			<h2>Find a route</h2>
+			<form id="find-a-route-form">
+			<div class="flex-container">
+				<div>
+					<label for="stopA">From:</label>
+					<select id="sorting" name="places">
+					<option value="number">Stop 1</option>
+					<option value="places">Stop 2</option>
+					<option value="places">Stop 3</option>
+					</select>
+				</div>
+				<div>
+					<label for="stopB">To:</label>
+					<select id="sorting" name="places">
+					<option value="number">Stop 1</option>
+					<option value="places">Stop 2</option>
+					<option value="places">Stop 3</option>
+					</select>
+				</div>
+				<div>
+					<label for="find-a-route-time">Time:</label>
+					<input type="time" name="from_time" min="05:00" max="23:30" value="06:00"/>
+					<input type="time" name="till_time" min="05:00" max="23:30" value="23:30"/>
+				</div>  
+			</div>
+			<a id="find-a-route-button" onclick="findRoute()" href="#">Find</a>
+			</form>
+			<div id="found-routes">
+				<h2>Found routes</h2>
+				<table class="entity_table">
+					<tr>
+						<th>Route number</th>
+						<th>From</th>
+						<th>To</th>
+					</tr>
+					<tr>
+						<td><a href="/nested/route_card">66</a></td>
+						<td>Saint-Petersburg</td>
+						<td>New York</td>
+					</tr>
+					<tr>
+						<td><a href="/nested/route_card">66</a></td>
+						<td>Saint-Petersburg</td>
+						<td>New York</td>
+					</tr>
+					<tr>
+						<td><a href="/nested/route_card">66</a></td>
+						<td>Saint-Petersburg</td>
+						<td>New York</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+	</section>-->
