--- a/dev-server/app/static-assets/sass/_navigation-menu.sass
+++ b/dev-server/app/static-assets/sass/_navigation-menu.sass
@@ -1,8 +1,5 @@
-#navigation-bar
-  width: 175px
-  padding: 10px
-
 nav
+  min-width: 175px
   display: flex
   flex-direction: column
   justify-content: flex-start
