--- a/dev-server/app/static-assets/sass/_index-style.sass
+++ b/dev-server/app/static-assets/sass/_index-style.sass
@@ -1,22 +1,32 @@
 .main-section
-  width: 100%
-  max-width: 900px
-  margin: auto
   display: flex
   flex-wrap: wrap
 
+#navigation-bar
+  padding: 10px
+  flex: 1
+
 #main-container
   padding: 10px 0
+  flex: 4
 
 .find-a-route-section
   background: $bg-image-url no-repeat center center
   background-size: cover
   width: 100%
-  min-width: 550px
+  min-width: 300px
   min-height: 550px
   border: solid 1px $header-main-color
   border-radius: 5px
 
 #accessory-menu
-  width: 175px
   padding: 10px
+  flex: 1
+
+@media (max-width: 690px)
+  #navigation-bar
+    order: 1
+  #main-container
+    order: 3
+  #accessory-menu
+    order: 2
