--- a/dev-server/app/templates/pages/index.hbs
+++ b/dev-server/app/templates/pages/index.hbs
@@ -16,9 +16,9 @@
 		</div>
 		<div id="accessory-menu">
 			<nav>
-				<a href="/nested/transport" class="nav-item">transport</a>
-				<a href="/nested/stops" class="nav-item">stops</a>
-				<a href="/nested/routes" class="nav-item">routes</a>
+				<a href="#" class="nav-item">Route 66</a>
+				<a href="#" class="nav-item">Route 100</a>
+				<a href="#" class="nav-item">Bus 80</a>
 			</nav>
 		</div>
 	</div>
