burger menu & index page layout (still in process)

--- a/dev-server/app/static-assets/sass/_header-style.sass
+++ b/dev-server/app/static-assets/sass/_header-style.sass
@@ -1,9 +1,9 @@
 header
   width: 100%
-  z-index: 5
+  z-index: 200
   background-image: linear-gradient($header-gradient-from, $header-middle-color, $header-gradient-to)
   padding: 5px 20px
-  border-radius: 0 0 25px 10px
+  border-radius: 0 0 25px 0
   h1
     font-family: $title-font
     color: $site-name-color
