--- a/dev-server/app/static-assets/css/styles.css
+++ b/dev-server/app/static-assets/css/styles.css
@@ -1,13 +1,13 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic);
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab");
-@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import url("https://fonts.googleapis.com/css?family=Ubuntu+Mono:700");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 header {
   width: 100%;
-  z-index: 5;
+  z-index: 200;
   background-image: linear-gradient(#fff7ed, #f1e6d9, #d6c8b7);
   padding: 5px 20px;
-  border-radius: 0 0 25px 10px;
+  border-radius: 0 0 25px 0;
 }
 header h1 {
   font-family: "Roboto Slab", serif;
@@ -93,50 +93,73 @@ header h1 {
     justify-content: space-between;
   }
 }
-.main-section {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-#navigation-bar {
-  padding: 10px;
-  flex: 1;
-}
-
-#main-container {
-  padding: 10px 0;
-  flex: 4;
-}
-
 .find-a-route-section {
   background: url(/static-assets/images/1.jpg) no-repeat center center;
   background-size: cover;
   width: 100%;
-  min-width: 300px;
-  min-height: 550px;
   border: solid 1px #2f3640;
   border-radius: 5px;
 }
 
-#accessory-menu {
+.substrate {
+  height: 100%;
+  background: rgba(255, 255, 255, 0.8);
+  margin: 5%;
+  padding: 20px;
+}
+.substrate h2 {
+  text-align: center;
+  font-size: 36px;
+}
+
+.find-route-form {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+.find-route-field label, .find-route-field input {
+  display: block;
+}
+.find-route-field label {
+  font-size: 26px;
+  margin: 15px;
+}
+.find-route-field input {
   padding: 10px;
-  flex: 1;
+  margin: 15px;
+  background-color: #f7f7f7;
+  min-width: 200px;
+  border: solid 1px #ddd;
+  border-radius: 10px;
+  opacity: 0.9;
+}
+.find-route-field input:hover {
+  opacity: 1;
+  transform: translate(0, -1px);
 }
 
-@media (max-width: 690px) {
-  #navigation-bar {
-    order: 1;
-  }
-
-  #main-container {
-    order: 3;
-  }
-
-  #accessory-menu {
-    order: 2;
-  }
+#find-a-route-button {
+  width: 100%;
+  max-width: 340px;
+  min-width: 200px;
+  margin: 20px auto;
+  display: block;
+  background-color: #51dcba;
+  border: 2px solid #2ad0a7;
+  color: white;
+  padding: 14px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  text-align: center;
 }
-nav {
+#find-a-route-button:hover {
+  background-color: #2ad0a7;
+}
+
+.menu {
   min-width: 175px;
   display: flex;
   flex-direction: column;
@@ -147,6 +170,12 @@ nav {
   padding: 15px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   background-image: linear-gradient(to bottom right, #d6c8b7, #fff7ed);
+}
+.menu h4 {
+  font-family: "Roboto Slab", serif;
+  text-align: center;
+  font-size: 22px;
+  color: #5a687b;
 }
 
 .nav-item {
@@ -173,6 +202,260 @@ nav {
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 6px 0 rgba(0, 0, 0, 0.19);
 }
 
+body {
+  background-color: #2f3640;
+}
+body .burger-base {
+  display: none;
+  z-index: 90;
+  position: absolute;
+  background-color: #fff7ed;
+  width: 0px;
+  height: 0px;
+  transition: all 1s cubic-bezier(0.5, -0.75, 0.05, 1);
+  border-bottom-right-radius: 100%;
+}
+body .burger-base .burger-menu {
+  z-index: 100;
+  background-color: #f1e6d9;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 60px;
+  height: 60px;
+  border-bottom-right-radius: 200px;
+  cursor: pointer;
+  transition: all 1s cubic-bezier(0.5, -0.75, 0.05, 1), background-color 1s ease;
+}
+body .burger-base .burger-menu .icon {
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  top: 56%;
+  left: 56%;
+  transform: translate(-100%, -100%);
+}
+body .burger-base .burger-menu .icon:before, body .burger-base .burger-menu .icon:after {
+  content: "";
+  transform: rotate(0deg);
+  transition: top 0.5s ease 0.5s, transform 0.5s ease, background-color 0.75s ease 0.25s;
+}
+body .burger-base .burger-menu .icon .bar, body .burger-base .burger-menu .icon:before, body .burger-base .burger-menu .icon:after {
+  position: absolute;
+  height: 5px;
+  left: 0px;
+  right: 0px;
+  border-radius: 5px;
+  background-color: #2f3640;
+}
+body .burger-base .burger-menu .icon .bar {
+  transition: opacity 0s linear 0.5s, background-color 0.75s ease 0.25s;
+  opacity: 1;
+  top: 10px;
+}
+body .burger-base .burger-menu .icon:before {
+  top: 0px;
+}
+body .burger-base .burger-menu .icon:after {
+  top: initial;
+  top: 20px;
+}
+body .burger-base .icons {
+  z-index: 98;
+  position: absolute;
+  top: 0px;
+  left: -50px;
+}
+body .burger-base .icons > * {
+  position: absolute;
+  font-size: 40px;
+  color: #2f3640;
+  transition: 0.3s cubic-bezier(0.5, -0.25, 0.05, 1);
+}
+body .burger-base .icons .fa-bus {
+  top: 35px;
+  left: 0px;
+  transition-delay: 0.2s;
+}
+body .burger-base .icons .fa-map-marked-alt {
+  top: 0px;
+  left: 0px;
+  color: #fff7ed;
+  transition-delay: 0.1s;
+}
+body .burger-base .icons .fa-route {
+  top: 0px;
+  left: 35px;
+}
+body .burger-base .section {
+  z-index: 96;
+  position: fixed;
+  top: 120px;
+  left: 0px;
+  height: 0px;
+  width: 0px;
+  transform-origin: 100% 100%;
+  transform: rotate(135deg);
+}
+body .burger-base .section .cover1 {
+  transform-origin: 100% 100%;
+}
+body .burger-base .section .cover1,
+body .burger-base .section .cover1 .cover2,
+body .burger-base .section .cover1 .cover2 .content {
+  position: absolute;
+  width: 600px;
+  height: 600px;
+}
+body .burger-base .section .cover1,
+body .burger-base .section .cover1 .cover2 {
+  top: 50%;
+  left: 50%;
+  transform: translate(-100%, -100%) rotate(4deg);
+  overflow: hidden;
+  pointer-events: none;
+  transition: transform 0.5s ease-in;
+}
+body .burger-base .section .cover1 .cover2 {
+  transform: translate(50%, -50%) rotate(-8deg);
+  transform-origin: 0% 100%;
+}
+body .burger-base .section .cover1 .cover2 .content {
+  width: 0px;
+  height: 0px;
+  border-radius: 100%;
+  background-color: #51dcba;
+  top: 100%;
+  left: 0%;
+  transform: translate(-50%, -50%);
+  transition: background-color 0s, width 1.5s cubic-bezier(0.5, -0.5, 0.05, 1) 0s, height 1.5s cubic-bezier(0.5, -0.5, 0.05, 1) 0s;
+  pointer-events: auto;
+}
+body .burger-base .section-static {
+  z-index: 94;
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  transform-origin: 0% 0%;
+  transition: width 1s cubic-bezier(0.5, -0.75, 0.05, 1), height 1s cubic-bezier(0.5, -0.75, 0.05, 1);
+}
+body .burger-base .section-static:hover {
+  background-color: #ffecd4;
+}
+body .burger-base .section-static.top {
+  transform: rotate(-45deg);
+  border-bottom-right-radius: 400px;
+}
+body .burger-base .section-static.bottom {
+  transform: rotate(45deg);
+  border-bottom-right-radius: 400px;
+}
+body .burger-base.burger-close {
+  width: 300px;
+  height: 300px;
+  transition: all 1.25s cubic-bezier(0.5, 0, 0.05, 1.75);
+}
+body .burger-base.burger-close .burger-menu {
+  width: 150px;
+  height: 150px;
+  transition: all 1s cubic-bezier(0.5, 0, 0.05, 1.75), background-color 1s ease;
+  background-color: #2f3640;
+}
+body .burger-base.burger-close .burger-menu .icon .bar, body .burger-base.burger-close .burger-menu .icon:before, body .burger-base.burger-close .burger-menu .icon:after {
+  background-color: #fff7ed;
+}
+body .burger-base.burger-close .burger-menu .icon .bar {
+  opacity: 0;
+}
+body .burger-base.burger-close .burger-menu .icon:before, body .burger-base.burger-close .burger-menu .icon:after {
+  transition: top 0.5s linear, transform 0.5s ease 0.5s, background-color 0.75s ease 0.25s;
+}
+body .burger-base.burger-close .burger-menu .icon:before {
+  top: 10px;
+  transform: rotate(-45deg);
+}
+body .burger-base.burger-close .burger-menu .icon:after {
+  top: 10px;
+  transform: rotate(45deg);
+}
+body .burger-base.burger-close .icons {
+  position: absolute;
+  top: 0px;
+  left: -50px;
+}
+body .burger-base.burger-close .icons > * {
+  position: absolute;
+  font-size: 40px;
+  color: #2f3640;
+  transition: 0.3s cubic-bezier(0.5, 0, 0.05, 1.75) 0.7s;
+  pointer-events: none;
+}
+body .burger-base.burger-close .icons .fa-bus {
+  top: 35px;
+  left: 250px;
+}
+body .burger-base.burger-close .icons .fa-map-marked-alt {
+  top: 141px;
+  left: 191px;
+  color: #fff7ed;
+  transition-delay: 0.65s;
+}
+body .burger-base.burger-close .icons .fa-route {
+  top: 200px;
+  left: 85px;
+  transition-delay: 0.8s;
+}
+body .burger-base.burger-close .section .cover1 {
+  transform-origin: 100% 100%;
+}
+body .burger-base.burger-close .section .cover1,
+body .burger-base.burger-close .section .cover1 .cover2,
+body .burger-base.burger-close .section .cover1 .cover2 .content {
+  position: absolute;
+  width: 600px;
+  height: 600px;
+}
+body .burger-base.burger-close .section .cover1,
+body .burger-base.burger-close .section .cover1 .cover2 {
+  top: 50%;
+  left: 50%;
+  transform: translate(-100%, -100%) rotate(16deg);
+  overflow: hidden;
+  transition: transform 0.5s ease-in 0.5s;
+}
+body .burger-base.burger-close .section .cover1 .cover2 {
+  transform: translate(50%, -50%) rotate(-32deg);
+  transform-origin: 0% 100%;
+}
+body .burger-base.burger-close .section .cover1 .cover2 .content {
+  border-radius: 100%;
+  background-color: #51dcba;
+  top: 100%;
+  left: 0%;
+  transform: translate(-50%, -50%);
+  transition: background-color 0s, width 1.1s cubic-bezier(0.5, 0, 0.05, 1.75) 0.25s, height 1.1s cubic-bezier(0.5, 0, 0.05, 2) 0.25s;
+}
+body .burger-base.burger-close .section .cover1 .cover2 .content:hover {
+  background-color: #3cd8b2;
+}
+body .burger-base.burger-close .section-static {
+  width: 300px;
+  height: 300px;
+  transition: width 1.25s cubic-bezier(0.5, 0, 0.05, 2), height 1.25s cubic-bezier(0.5, 0, 0.05, 2);
+}
+
+@media (min-width: 760px) {
+  body .burger-base .section {
+    top: 65px;
+  }
+}
+@media (max-width: 900px) {
+  body .burger-base {
+    display: block;
+  }
+}
 body {
   font-family: "Open Sans Condensed", Helvetica, Arial, sans-serif;
   font-weight: 300;
@@ -245,55 +528,6 @@ td a {
   background-color: #ddd;
 }
 
-#index-section {
-  background: url(/static-assets/images/1.jpg) no-repeat center center;
-  width: 100%;
-  min-height: 480px;
-  padding-top: 5%;
-}
-
-.substrate {
-  width: 100%;
-  height: 100%;
-  max-width: 1000px;
-  background: rgba(255, 255, 255, 0.8);
-  margin: auto;
-  padding: 0 20px;
-}
-.substrate table {
-  margin: 0 auto 20px;
-}
-
-#find-a-route-form {
-  font-size: 1.2em;
-  font-weight: bold;
-}
-#find-a-route-form select, #find-a-route-form input[type=time] {
-  border: 2px solid #309fca;
-}
-
-#find-a-route-button {
-  width: 100%;
-  max-width: 340px;
-  min-width: 200px;
-  margin: 20px auto;
-  display: block;
-  background-color: #51dcba;
-  border: 2px solid #2ad0a7;
-  color: white;
-  padding: 14px 20px;
-  border-radius: 4px;
-  cursor: pointer;
-  text-align: center;
-}
-#find-a-route-button:hover {
-  background-color: #2ad0a7;
-}
-
-#found-routes {
-  display: none;
-}
-
 #login, #pass {
   width: 100%;
   padding: 12px 20px;
@@ -341,11 +575,11 @@ html {
 a {
   background-color: transparent;
   cursor: pointer;
-  color: #000;
+  color: inherit;
 }
 a:active, a:hover, a:visited {
   outline: 0;
-  color: #000;
+  color: inherit;
 }
 
 button,
@@ -529,7 +763,7 @@ textarea {
   border-bottom: 5px solid #191d23;
 }
 
-.flex-container, form, #map {
+#map {
   width: 100%;
   max-width: 900px;
   margin: auto;
@@ -539,18 +773,31 @@ main {
   width: 100%;
 }
 
-.content {
-  width: 100%;
-  padding: 0 10%;
-  background: linear-gradient(to top, #f1e6d9, #f8f6f5);
-}
-.content h2 {
-  padding: 28px 0;
-  font-size: 36px;
-  font-weight: 400;
-  text-align: center;
+.main-section {
+  display: flex;
+  flex-wrap: wrap;
 }
 
+#navigation-bar {
+  padding: 10px;
+  flex: 1;
+}
+
+#main-container {
+  padding: 10px 0;
+  flex: 4;
+}
+
+#accessory-menu {
+  padding: 10px;
+  flex: 1;
+}
+
+@media (max-width: 900px) {
+  #navigation-bar, #accessory-menu {
+    display: none;
+  }
+}
 .simple-text {
   font-size: 28px;
 }
@@ -563,35 +810,6 @@ main {
 
 #map {
   height: 400px;
-}
-
-select, input[type=time] {
-  width: 100%;
-  margin-top: 20px;
-  padding: 10px 20px;
-  border: 2px solid #ddd;
-  border-radius: 4px;
-  opacity: 0.8;
-}
-select:hover, input[type=time]:hover {
-  opacity: 1;
-}
-
-.flex-container {
-  display: flex;
-  flex-flow: row wrap;
-}
-.flex-container label {
-  display: block;
-}
-.flex-container > div {
-  width: 250px;
-  margin: 10px auto;
-}
-
-label {
-  font-size: 22px;
-  margin-right: 20px;
 }
 
 .copyright {
