--- a/dev-server/app/static-assets/sass/_index-style.sass
+++ b/dev-server/app/static-assets/sass/_index-style.sass
@@ -1,32 +1,58 @@
-.main-section
-  display: flex
-  flex-wrap: wrap
-
-#navigation-bar
-  padding: 10px
-  flex: 1
-
-#main-container
-  padding: 10px 0
-  flex: 4
-
 .find-a-route-section
   background: $bg-image-url no-repeat center center
   background-size: cover
   width: 100%
-  min-width: 300px
-  min-height: 550px
   border: solid 1px $header-main-color
   border-radius: 5px
 
-#accessory-menu
-  padding: 10px
-  flex: 1
+.substrate
+  height: 100%
+  background: $substrate-bg-color
+  margin: 5%
+  padding: 20px
+  h2
+    text-align: center
+    font-size: 36px
 
-@media (max-width: 690px)
-  #navigation-bar
-    order: 1
-  #main-container
-    order: 3
-  #accessory-menu
-    order: 2
+.find-route-form
+    display: flex
+    flex-direction: row
+    flex-wrap: wrap
+    justify-content: space-around
+    align-items: flex-start
+
+.find-route-field
+  label, input
+    display: block
+  label
+    font-size: 26px
+    margin: 15px
+  input
+    padding: 10px
+    margin: 15px
+    background-color: $input-bg-color
+    min-width: 200px
+    border: solid 1px $borders-color
+    border-radius: 10px
+    opacity: 0.9
+    &:hover
+      opacity: 1
+      transform: translate(0,-1px)
+
+#find-a-route-button
+  width: 100%
+  max-width: 340px
+  min-width: 200px
+  margin: 20px auto
+  display: block
+  background-color: $special-color
+  border: 2px solid darken($special-color,10%)
+  color: white
+  padding: 14px 20px
+  border-radius: 4px
+  cursor: pointer
+  text-align: center
+  &:hover
+    background-color: darken($special-color,10%)
+
+  
