--- a/dev-server/app/static-assets/sass/_variables.sass
+++ b/dev-server/app/static-assets/sass/_variables.sass
@@ -1,7 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic)
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab')
-@import url('https://fonts.googleapis.com/icon?family=Material+Icons')
 @import url('https://fonts.googleapis.com/css?family=Ubuntu+Mono:700')
+
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons')
 
 $simple-font: 'Open Sans Condensed', Helvetica, Arial, sans-serif
 $title-font: 'Roboto Slab', serif
@@ -13,6 +14,7 @@ $table-highlight-color: #ddd
 $borders-color: #ddd
 $table-uneven-tr-color: #f2f2f2
 $link-hover-color: #bbb
+$input-bg-color: #f7f7f7
 
 $special-color: #51dcba
 $find-a-route-page-color: #309fca
