--- a/dev-server/app/static-assets/sass/_find-field.sass
+++ b/dev-server/app/static-assets/sass/_find-field.sass
@@ -1,38 +1,36 @@
 .find-box
-  display: inline-block
-  margin-top: 5px
-  background: $header-main-color
+  background: #fff
   border-radius: 40px
+  height: 48px
   padding: 3px
+  border: 1px solid #ccc
   &:hover > .find-txt 
     width: 200px
     padding: 0 10px
   &:hover > .find-btn 
-    background: $header-alternative-color
-    color: black
+    background: #ccc
 
 .find-btn 
-  color: #e84118
   float: right
   width: 40px
   height: 40px
   border-radius: 50%
-  background: $header-main-color
+  background: $header-color
   display: flex
   justify-content: center
   align-items: center
   transition: 0.4s
-  color: $header-alternative-color
   cursor: pointer
   & > i 
     font-size: 30px
+    color: #000
 
 .find-txt
   border: none
   background: none
   outline: none
   padding: 0
-  color: $header-alternative-color
+  color: #000
   font-size: 16px
   transition: 0.4s
   line-height: 40px
