--- a/dev-server/app/static-assets/sass/_page-pieces.sass
+++ b/dev-server/app/static-assets/sass/_page-pieces.sass
@@ -1,11 +1,16 @@
 body
-  font-family: $simple-font
+  position: absolute
+  width: 100%
+  height: 100%
+  font-family: $main-font
   font-weight: 300
-  background: $background-color
+  background: #fff
   min-width: 300px
 
 footer
   width: 100%
+  position: absolute
+  bottom: 0
 
 footer
   padding: 20px
