--- a/dev-server/app/static-assets/css/styles.css
+++ b/dev-server/app/static-assets/css/styles.css
@@ -2,97 +2,183 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab");
 @import url("https://fonts.googleapis.com/css?family=Ubuntu+Mono:700");
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@font-face {
+  font-family: "Mission";
+  src: url(/static-assets/fonts/Mission_Gothic_Regular.otf);
+}
+@font-face {
+  font-family: "Mission";
+  src: url(/static-assets/fonts/Mission_Gothic_Light.otf);
+}
+@font-face {
+  font-family: "Mission";
+  src: url(/static-assets/fonts/Mission_Gothic_Thin.otf);
+}
 header {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  z-index: 200;
-  background-image: linear-gradient(#fff7ed, #f1e6d9, #d6c8b7);
-  padding: 5px 20px;
-  border-radius: 0 0 25px 0;
+  z-index: 10;
+  background: #f2f2f2;
+  padding: 5px;
+  border-bottom: 2px solid #29b8ed;
 }
 header h1 {
-  font-family: "Roboto Slab", serif;
-  color: #333;
-  font-size: 42px;
-  font-weight: 400;
+  font-family: Mission, "Mission Gothic Regular";
+  color: #000;
+  font-size: 2.7em;
   text-rendering: optimizeLegibility;
+  margin-left: 20px;
 }
 
-.drop-shadow {
-  text-shadow: -1px 1px rgba(140, 140, 140, 0.9), -2px 2px rgba(140, 140, 140, 0.8), -3px 3px rgba(140, 140, 140, 0.7), -4px 4px rgba(140, 140, 140, 0.6), -5px 5px rgba(140, 140, 140, 0.5), -6px 6px rgba(140, 140, 140, 0.4), -7px 7px rgba(140, 140, 140, 0.3), -8px 8px rgba(140, 140, 140, 0.2), -9px 9px rgba(140, 140, 140, 0.1), -10px 10px rgba(140, 140, 140, 0), -11px 11px rgba(140, 140, 140, 0), -12px 12px rgba(140, 140, 140, 0), -13px 13px rgba(140, 140, 140, 0), -14px 14px rgba(140, 140, 140, 0), -15px 15px rgba(140, 140, 140, 0), -16px 16px rgba(140, 140, 140, 0), -17px 17px rgba(140, 140, 140, 0), -18px 18px rgba(140, 140, 140, 0), -19px 19px rgba(140, 140, 140, 0), -20px 20px rgba(140, 140, 140, 0);
+nav {
+  display: flex;
 }
 
-.site-name {
-  text-align: center;
+.header-main-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 }
 
-.find-field {
-  display: none;
+.header-container {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.navigation-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.nav-item {
+  font-family: Mission, "Mission Gothic Light";
+  text-transform: uppercase;
+  letter-spacing: 0.15em;
+  font-size: 1.3em;
+  margin: 0 10px;
+}
+.nav-item:hover {
+  text-decoration: underline;
 }
 
 .header-buttons {
   display: flex;
-  justify-content: space-evenly;
-  align-items: flex-end;
-  height: 55px;
-  padding-bottom: 5px;
+  flex-direction: row;
+  align-items: center;
+}
+.header-buttons > div {
+  margin: 0 10px;
+}
+.header-buttons a:hover {
+  color: #29b8ed;
 }
 
-.day-night-toggle {
-  margin: 0;
+.material-icons {
+  font-size: 32px;
 }
 
-@media (min-width: 460px) {
-  .header-container {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  .header-container > div {
-    height: 55px;
-  }
+.fa-bookmark {
+  font-size: 25px;
+}
 
-  .site-name {
-    width: 100%;
-    text-align: center;
-  }
+.close-pic {
+  position: absolute;
+  right: 16px;
+}
+.close-pic:hover {
+  color: #29b8ed;
+}
 
-  .find-field {
-    min-width: 260px;
-    display: block;
+.find-pic, .burger, .floating-menu {
+  display: none;
+}
+
+.floating-menu {
+  top: -130px;
+  transition: top 0.4s ease;
+}
+
+.mobile-find-field {
+  position: absolute;
+  top: 62px;
+  left: -102%;
+  display: none;
+  background: #f2f2f2;
+  width: 100%;
+  justify-content: center;
+  padding: 20px;
+  transition: left 0.4s ease;
+}
+.mobile-find-field input {
+  color: #000;
+  font-size: 1.4rem;
+  border-bottom: 1px solid #000;
+  background-color: transparent;
+}
+
+@media (max-width: 585px) {
+  .floating-menu {
+    top: -130px;
   }
 
   .find-box {
-    display: table;
+    display: none;
   }
 
-  .header-buttons {
-    width: 140px;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
+  .find-pic {
+    display: block;
   }
 
-  .day-night-toggle {
+  .header-buttons > div {
+    margin: 0 5px;
+  }
+
+  header h1 {
     margin: 0;
   }
-}
-@media (min-width: 760px) {
-  .header-container {
-    margin: auto;
-    max-width: 900px;
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: 220px 260px 200px;
-    justify-content: space-between;
+
+  nav {
+    flex-direction: column;
   }
-  .header-container > div {
-    height: 55px;
+
+  .nav-item {
+    margin: 5px;
   }
-  .header-container .header-buttons {
-    justify-content: space-between;
+
+  .mobile-find-field {
+    display: flex;
   }
 }
+@media (max-width: 875px) {
+  .floating-menu {
+    display: flex;
+    background: #f2f2f2;
+    width: 100%;
+    justify-content: center;
+    padding: 20px;
+  }
+
+  .navigation-bar {
+    display: none;
+  }
+
+  .burger {
+    display: block;
+  }
+}
+.show-mobile-search {
+  left: 0;
+}
+
+.show-menu {
+  top: 62px;
+}
+
 .find-a-route-section {
   background: url(/static-assets/images/1.jpg) no-repeat center center;
   background-size: cover;
@@ -158,305 +244,74 @@ header h1 {
   background-color: #2ad0a7;
 }
 
-.menu {
-  min-width: 175px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-content: flex-start;
-  border: solid 1px #2f3640;
-  border-radius: 10px;
-  padding: 15px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  background-image: linear-gradient(to bottom right, #d6c8b7, #fff7ed);
-}
-.menu h4 {
-  font-family: "Roboto Slab", serif;
-  text-align: center;
-  font-size: 22px;
-  color: #5a687b;
-}
-
-.nav-item {
-  font-size: 22px;
-  font-family: "Ubuntu Mono", monospace;
-  color: #718197;
-  margin-top: 10px;
-  padding: 10px;
-  border-radius: 5px;
-  text-transform: uppercase;
-  font-weight: 500;
-  background-color: #f1e6d9;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  transition: background-color 0.5s, box-shadow 0.1s, transform 0.1s;
-}
-.nav-item:hover {
-  color: #2f3640;
-  background-color: #eadac6;
-  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2), 0 4px 15px 0 rgba(0, 0, 0, 0.19);
-  transform: translate(0, 1px);
-}
-.nav-item:active {
-  transform: translate(0, 3px);
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 6px 0 rgba(0, 0, 0, 0.19);
-}
-
-body .burger-base {
-  display: none;
-  z-index: 90;
-  position: absolute;
-  background-color: #fff7ed;
-  width: 0px;
-  height: 0px;
-  transition: all 1s cubic-bezier(0.5, -0.75, 0.05, 1);
-  border-bottom-right-radius: 100%;
-}
-body .burger-base .burger-menu {
-  z-index: 100;
-  background-color: #f1e6d9;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 60px;
-  height: 60px;
-  border-bottom-right-radius: 200px;
+.ham {
   cursor: pointer;
-  transition: all 1s cubic-bezier(0.5, -0.75, 0.05, 1), background-color 1s ease;
-}
-body .burger-base .burger-menu .icon {
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  top: 56%;
-  left: 56%;
-  transform: translate(-100%, -100%);
-}
-body .burger-base .burger-menu .icon:before, body .burger-base .burger-menu .icon:after {
-  content: "";
-  transform: rotate(0deg);
-  transition: top 0.5s ease 0.5s, transform 0.5s ease, background-color 0.75s ease 0.25s;
-}
-body .burger-base .burger-menu .icon .bar, body .burger-base .burger-menu .icon:before, body .burger-base .burger-menu .icon:after {
-  position: absolute;
-  height: 5px;
-  left: 0px;
-  right: 0px;
-  border-radius: 5px;
-  background-color: #2f3640;
-}
-body .burger-base .burger-menu .icon .bar {
-  transition: opacity 0s linear 0.5s, background-color 0.75s ease 0.25s;
-  opacity: 1;
-  top: 10px;
-}
-body .burger-base .burger-menu .icon:before {
-  top: 0px;
-}
-body .burger-base .burger-menu .icon:after {
-  top: initial;
-  top: 20px;
-}
-body .burger-base .icons {
-  z-index: 98;
-  position: absolute;
-  top: 0px;
-  left: -50px;
-}
-body .burger-base .icons > * {
-  position: absolute;
-  font-size: 40px;
-  color: #2f3640;
-  transition: 0.3s cubic-bezier(0.5, -0.25, 0.05, 1);
-}
-body .burger-base .icons .fa-bus {
-  top: 35px;
-  left: 0px;
-  transition-delay: 0.2s;
-}
-body .burger-base .icons .fa-map-marked-alt {
-  top: 0px;
-  left: 0px;
-  color: #fff7ed;
-  transition-delay: 0.1s;
-}
-body .burger-base .icons .fa-route {
-  top: 0px;
-  left: 35px;
-}
-body .burger-base .section {
-  z-index: 96;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  height: 0px;
-  width: 0px;
-  transform-origin: 100% 100%;
-  transform: rotate(135deg);
-}
-body .burger-base .section .cover1 {
-  transform-origin: 100% 100%;
-  position: fixed;
-}
-body .burger-base .section .cover1,
-body .burger-base .section .cover1 .cover2,
-body .burger-base .section .cover1 .cover2 .content {
-  position: fixed;
-  width: 400px;
-  height: 400px;
-}
-body .burger-base .section .cover1,
-body .burger-base .section .cover1 .cover2 {
-  top: 50%;
-  left: 50%;
-  transform: translate(-100%, -100%) rotate(4deg);
-  overflow: hidden;
-  pointer-events: none;
-  transition: transform 0.5s ease-in;
-}
-body .burger-base .section .cover1 .cover2 {
-  transform: translate(50%, -50%) rotate(-8deg);
-  transform-origin: 0% 100%;
-}
-body .burger-base .section .cover1 .cover2 .content {
-  width: 0px;
-  height: 0px;
-  border-radius: 100%;
-  background-color: #51dcba;
-  top: 100%;
-  left: 0%;
-  transform: translate(-50%, -50%);
-  transition: background-color 0s, width 1.5s cubic-bezier(0.5, -0.5, 0.05, 1) 0s, height 1.5s cubic-bezier(0.5, -0.5, 0.05, 1) 0s;
-  pointer-events: auto;
-}
-body .burger-base .section-static {
-  z-index: 94;
-  width: 0px;
-  height: 0px;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  transform-origin: 0% 0%;
-  transition: width 1s cubic-bezier(0.5, -0.75, 0.05, 1), height 1s cubic-bezier(0.5, -0.75, 0.05, 1);
-}
-body .burger-base .section-static:hover {
-  background-color: #ffecd4;
-}
-body .burger-base .section-static.top {
-  transform: rotate(-45deg);
-  border-bottom-right-radius: 400px;
-}
-body .burger-base .section-static.bottom {
-  transform: rotate(45deg);
-  border-bottom-right-radius: 400px;
-}
-body .burger-base.burger-close {
-  width: 200px;
-  height: 200px;
-  transition: all 1.25s cubic-bezier(0.5, 0, 0.05, 1.75);
-}
-body .burger-base.burger-close .burger-menu {
-  width: 80px;
-  height: 80px;
-  transition: all 1s cubic-bezier(0.5, 0, 0.05, 1.75), background-color 1s ease;
-  background-color: #2f3640;
-}
-body .burger-base.burger-close .burger-menu .icon .bar, body .burger-base.burger-close .burger-menu .icon:before, body .burger-base.burger-close .burger-menu .icon:after {
-  background-color: #fff7ed;
-}
-body .burger-base.burger-close .burger-menu .icon .bar {
-  opacity: 0;
-}
-body .burger-base.burger-close .burger-menu .icon:before, body .burger-base.burger-close .burger-menu .icon:after {
-  transition: top 0.5s linear, transform 0.5s ease 0.5s, background-color 0.75s ease 0.25s;
-}
-body .burger-base.burger-close .burger-menu .icon:before {
-  top: 10px;
-  transform: rotate(-45deg);
-}
-body .burger-base.burger-close .burger-menu .icon:after {
-  top: 10px;
-  transform: rotate(45deg);
-}
-body .burger-base.burger-close .icons {
-  position: absolute;
-  top: 0px;
-  left: -50px;
-}
-body .burger-base.burger-close .icons > * {
-  position: absolute;
-  font-size: 40px;
-  color: #2f3640;
-  transition: 0.3s cubic-bezier(0.5, 0, 0.05, 1.75) 0.7s;
-  pointer-events: none;
-}
-body .burger-base.burger-close .icons .fa-bus {
-  top: 18px;
-  left: 178px;
-}
-body .burger-base.burger-close .icons .fa-map-marked-alt {
-  top: 82px;
-  left: 135px;
-  color: #fff7ed;
-  transition-delay: 0.65s;
-}
-body .burger-base.burger-close .icons .fa-route {
-  top: 130px;
-  left: 65px;
-  transition-delay: 0.8s;
-}
-body .burger-base.burger-close .section .cover1 {
-  transform-origin: 100% 100%;
-}
-body .burger-base.burger-close .section .cover1,
-body .burger-base.burger-close .section .cover1 .cover2,
-body .burger-base.burger-close .section .cover1 .cover2 .content {
-  position: absolute;
-  width: 400px;
-  height: 400px;
-}
-body .burger-base.burger-close .section .cover1,
-body .burger-base.burger-close .section .cover1 .cover2 {
-  top: 50%;
-  left: 50%;
-  transform: translate(-100%, -100%) rotate(16deg);
-  overflow: hidden;
-  transition: transform 0.5s ease-in 0.5s;
-}
-body .burger-base.burger-close .section .cover1 .cover2 {
-  transform: translate(50%, -50%) rotate(-32deg);
-  transform-origin: 0% 100%;
-}
-body .burger-base.burger-close .section .cover1 .cover2 .content {
-  border-radius: 100%;
-  background-color: #51dcba;
-  top: 100%;
-  left: 0%;
-  transform: translate(-50%, -50%);
-  transition: background-color 0s, width 1.1s cubic-bezier(0.5, 0, 0.05, 1.75) 0.25s, height 1.1s cubic-bezier(0.5, 0, 0.05, 2) 0.25s;
-}
-body .burger-base.burger-close .section .cover1 .cover2 .content:hover {
-  background-color: #3cd8b2;
-}
-body .burger-base.burger-close .section-static {
-  width: 200px;
-  height: 200px;
-  transition: width 1.25s cubic-bezier(0.5, 0, 0.05, 2), height 1.25s cubic-bezier(0.5, 0, 0.05, 2);
+  -webkit-tap-highlight-color: transparent;
+  transition: transform 400ms;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-@media (max-width: 900px) {
-  body .burger-base {
-    display: block;
-  }
+.hamRotate.active {
+  transform: rotate(45deg);
 }
+
+.hamRotate180.active {
+  transform: rotate(180deg);
+}
+
+.line {
+  fill: none;
+  transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+  stroke: #000;
+  stroke-width: 5.5;
+  stroke-linecap: round;
+}
+
+.ham8 .top {
+  stroke-dasharray: 40 160;
+}
+
+.ham8 .middle {
+  stroke-dasharray: 40 142;
+  transform-origin: 50%;
+  transition: transform 400ms;
+}
+
+.ham8 .bottom {
+  stroke-dasharray: 40 85;
+  transform-origin: 50%;
+  transition: transform 400ms, stroke-dashoffset 400ms;
+}
+
+.ham8.active .top {
+  stroke-dashoffset: -64px;
+}
+
+.ham8.active .middle {
+  transform: rotate(90deg);
+}
+
+.ham8.active .bottom {
+  stroke-dashoffset: -64px;
+}
+
 body {
-  font-family: "Open Sans Condensed", Helvetica, Arial, sans-serif;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  font-family: Mission, "Mission Gothic Thin";
   font-weight: 300;
-  background: #f1e6d9;
+  background: #fff;
   min-width: 300px;
 }
 
 footer {
   width: 100%;
+  position: absolute;
+  bottom: 0;
 }
 
 footer {
@@ -683,37 +538,35 @@ textarea {
 }
 
 .find-box {
-  display: inline-block;
-  margin-top: 5px;
-  background: #2f3640;
+  background: #fff;
   border-radius: 40px;
+  height: 48px;
   padding: 3px;
+  border: 1px solid #ccc;
 }
 .find-box:hover > .find-txt {
   width: 200px;
   padding: 0 10px;
 }
 .find-box:hover > .find-btn {
-  background: #f9f4ef;
-  color: black;
+  background: #ccc;
 }
 
 .find-btn {
-  color: #e84118;
   float: right;
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: #2f3640;
+  background: #f2f2f2;
   display: flex;
   justify-content: center;
   align-items: center;
   transition: 0.4s;
-  color: #f9f4ef;
   cursor: pointer;
 }
 .find-btn > i {
   font-size: 30px;
+  color: #000;
 }
 
 .find-txt {
@@ -721,7 +574,7 @@ textarea {
   background: none;
   outline: none;
   padding: 0;
-  color: #f9f4ef;
+  color: #000;
   font-size: 16px;
   transition: 0.4s;
   line-height: 40px;
@@ -755,12 +608,6 @@ textarea {
   border-bottom: 5px solid #191d23;
 }
 
-#map {
-  width: 100%;
-  max-width: 900px;
-  margin: auto;
-}
-
 main {
   width: 100%;
 }
@@ -768,28 +615,14 @@ main {
 .main-section {
   display: flex;
   flex-wrap: wrap;
-}
-
-#navigation-bar {
-  padding: 10px;
-  flex: 1;
+  align-items: flex-start;
 }
 
 #main-container {
   padding: 10px 0;
-  flex: 4;
+  flex: 6;
 }
 
-#accessory-menu {
-  padding: 10px;
-  flex: 1;
-}
-
-@media (max-width: 900px) {
-  #navigation-bar, #accessory-menu {
-    display: none;
-  }
-}
 .simple-text {
   font-size: 28px;
 }
@@ -801,15 +634,20 @@ main {
 }
 
 #map {
+  width: 100%;
+  max-width: 900px;
+  margin: auto;
+}
+
+#map {
   height: 400px;
 }
 
 .copyright {
-  clear: both;
   display: block;
   text-align: center;
-  color: #666;
-  font-size: 16px;
+  color: #000;
+  font-size: 20px;
 }
 
 /*# sourceMappingURL=styles.css.map */
