--- a/dev-server/app/static-assets/sass/_header-style.sass
+++ b/dev-server/app/static-assets/sass/_header-style.sass
@@ -1,72 +1,125 @@
 header
+  position: absolute
+  top: 0
+  left: 0
   width: 100%
-  z-index: 200
-  background-image: linear-gradient($header-gradient-from, $header-middle-color, $header-gradient-to)
-  padding: 5px 20px
-  border-radius: 0 0 25px 0
+  z-index: 10
+  background: $header-color
+  padding: 5px
+  border-bottom: 2px solid $main-color
   h1
-    font-family: $title-font
-    color: $site-name-color
-    font-size: 42px
-    font-weight: 400
+    font-family: $logo-font
+    color: #000
+    font-size: 2.7em
     text-rendering: optimizeLegibility
+    margin-left: 20px
 
-.drop-shadow
-  $value: ()
-  @for $i from 1 through 20
-    $num: $i + px
-    $pct: $i / 10
-    $black: 1 - $pct
-    $theShadow: (-$num) $num rgba(140,140,140,$black)
-    $value: append($value, $theShadow, comma)
-  text-shadow: $value
+nav
+  display: flex
 
-.site-name
-  text-align: center
-.find-field
-  display: none
+.header-main-section
+  display: flex
+  flex-direction: row
+  justify-content: flex-start
+
+.header-container
+  display: flex
+  align-items: center
+  flex-direction: row
+  justify-content: space-between    
+
+.navigation-bar
+  display: flex
+  flex-direction: row
+  justify-content: flex-start
+  
+.nav-item
+  font-family: $menus-font
+  text-transform: uppercase
+  letter-spacing: 0.15em
+  font-size: 1.3em
+  margin: 0 10px
+  &:hover
+    text-decoration: underline
+
 .header-buttons
   display: flex
-  justify-content: space-evenly
-  align-items: flex-end
-  height: 55px
-  padding-bottom: 5px
-.day-night-toggle
-  margin: 0
+  flex-direction: row
+  align-items: center
+  & > div
+    margin: 0 10px
+  a:hover
+    color: $main-color
 
-@media (min-width: 460px)
-  .header-container
-    width: 100%
-    display: flex
-    flex-wrap: wrap
-    justify-content: space-between
-    & > div
-      height: 55px
-  .site-name
-    width: 100%
-    text-align: center
-  .find-field
-    min-width: 260px
-    display: block
+.material-icons
+  font-size: 32px
+.fa-bookmark
+  font-size: 25px
+
+.close-pic
+  position: absolute
+  right: 16px
+  &:hover
+    color: $main-color
+
+.find-pic, .burger, .floating-menu
+  display: none
+
+.floating-menu
+  top: -130px
+  transition: top 0.4s ease
+
+.mobile-find-field
+  position: absolute
+  top: 62px
+  left: -102%
+  display: none
+  background: #f2f2f2
+  width: 100%
+  justify-content: center
+  padding: 20px
+  transition: left 0.4s ease
+  input
+    color: #000
+    font-size: 1.4rem
+    border-bottom: 1px solid #000
+    background-color: transparent
+
+@media (max-width: 585px)
+  .floating-menu
+    top: -130px
   .find-box
-    display: table
-  .header-buttons
-    width: 140px
+    display: none
+  .find-pic
+    display: block
+  .header-buttons > div
+      margin: 0 5px
+  header
+    h1
+      margin: 0
+  nav
+    flex-direction: column
+  .nav-item
+    margin: 5px
+  .mobile-find-field
     display: flex
-    justify-content: space-between
-    align-items: flex-end
-  .day-night-toggle
-    margin: 0
 
-@media (min-width: 760px)
-  .header-container
-    margin: auto
-    max-width: 900px
-    display: grid
-    grid-gap: 20px
-    grid-template-columns: 220px 260px 200px
-    justify-content: space-between
-    & > div
-      height: 55px
-    .header-buttons
-      justify-content: space-between
+@media (max-width: 875px)
+  .floating-menu
+    display: flex
+    background: #f2f2f2
+    width: 100%
+    justify-content: center
+    padding: 20px
+  .navigation-bar
+    display: none
+  .burger
+    display: block
+  //.mobile-find-field
+  //  display: none
+
+.show-mobile-search
+  left: 0
+
+.show-menu
+  top: 62px
