--- a/dev-server/app/static-assets/sass/_navigation-menu.sass
+++ b/dev-server/app/static-assets/sass/_navigation-menu.sass
@@ -2,9 +2,9 @@
   min-width: 175px
   display: flex
   flex-direction: column
-  justify-content: flex-start
-  align-content: flex-start
-  border: solid 1px $header-main-color
+  flex: 1
+  margin: 10px
+  border: solid 1px $header-gradient-to
   border-radius: 10px
   padding: 15px
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
@@ -34,3 +34,8 @@
   &:active
     transform: translate(0,3px)
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 6px 0 rgba(0, 0, 0, 0.19)
+
+
+@media (max-width: 900px)
+  .menu
+    display: none
