--- a/dev-server/app/static-assets/sass/_variables.sass
+++ b/dev-server/app/static-assets/sass/_variables.sass
@@ -8,7 +8,6 @@ $simple-font: 'Open Sans Condensed', Helvetica, Arial, sans-serif
 $title-font: 'Roboto Slab', serif
 $entity-table-font: "Trebuchet MS", Arial, Helvetica, sans-serif
 
-$background-color: #f1e6d9
 $background-gradient-color-to: #f8f6f5
 $table-highlight-color: #ddd
 $borders-color: #ddd
@@ -29,3 +28,22 @@ $header-gradient-to: #d6c8b7
 $site-name-color: #333
 $header-main-color: #2f3640
 $header-alternative-color: #f9f4ef
+
+//new style
+
+@font-face
+	font-family: "Mission"
+	src: url(/static-assets/fonts/Mission_Gothic_Regular.otf)
+@font-face
+	font-family: "Mission"
+	src: url(/static-assets/fonts/Mission_Gothic_Light.otf)
+@font-face
+	font-family: "Mission"
+	src: url(/static-assets/fonts/Mission_Gothic_Thin.otf)
+
+$logo-font: Mission, 'Mission Gothic Regular'
+$menus-font: Mission, 'Mission Gothic Light'
+$main-font: Mission, 'Mission Gothic Thin'
+
+$header-color: #f2f2f2
+$main-color: #29b8ed
