--- a/dev-server/app/templates/pages/index.hbs
+++ b/dev-server/app/templates/pages/index.hbs
@@ -1,36 +1,11 @@
-{{> html/start title="T-shipping" settings=settings }}
+{{> html/start title="T-Port" settings=settings }}
 {{> html/header }}
-    <main>
-		<div class="burger-base">
-			<div class="burger-menu" onclick="burgerMenuToggle()">
-				<div class="icon">
-					<div class="bar"></div>
-				</div>
-			</div>
-			<div class="icons">
-				<i class="fas fa-bus"></i>
-				<i class="fas fa-map-marked-alt"></i>
-				<i class="fas fa-route"></i>
-			</div>
-			<div class="section">
-				<div class="cover1">
-					<div class="cover2">
-						<a class="content" href="/nested/stops"></a>
-					</div>
-				</div>
-			</div>
-			<a class="section-static top" href="/nested/transport"></a>
-			<a class="section-static bottom" href="/nested/routes"></a>
-		</div>
+    <!--<main>
+		{{> html/burger }}
 	<div class="main-section">
-		<div id="navigation-bar">
-			<nav class='menu'>
-				<h4>Menu</h4>
-				<a href="/nested/transport" class="nav-item">transport</a>
-				<a href="/nested/stops" class="nav-item">stops</a>
-				<a href="/nested/routes" class="nav-item">routes</a>
-			</nav>
-		</div>
+		<div id="navigation-menu">
+			{{> html/nav_menu }}
+		<!</div>
 		<div id="main-container">
 			<div class="find-a-route-section">
 				<div class="substrate">
@@ -67,7 +42,7 @@
 			</div>
 		</div>
 	</div>
-	</main>
+	</main>-->
 	
 {{> html/footer }}
 {{> html/end }}
