--- a/dev-server/app/templates/partials/html/footer.hbs
+++ b/dev-server/app/templates/partials/html/footer.hbs
@@ -1,3 +1,3 @@
     <footer>
-        <div class="copyright">© 2018 T-Shipping</div>
+        <div class="copyright">© 2018 T-port</div>
     </footer>
