--- a/dev-server/app/templates/partials/html/header.hbs
+++ b/dev-server/app/templates/partials/html/header.hbs
@@ -1,31 +1,55 @@
 	<header>
 		<div class="header-container">
-		  <div class="site-name"><h1 class="drop-shadow"><a href="/">T-Shipping</a></h1></div>
-		  <div class="find-field">
-				<div class="find-box">
-					<input type="text" name="" class="find-txt" placeholder="Search..."/>
-					<a class="find-btn">
+		    <div class="header-main-section">
+				<div class="burger" onclick="burgerMenuToggle()">
+					<svg class="ham hamRotate ham8" viewBox="0 0 100 100" width="50" onclick="this.classList.toggle('active')">
+						<path class="line top" d="m 30,33 h 40 c 3.722839,0 7.5,3.126468 7.5,8.578427 0,5.451959 -2.727029,8.421573 -7.5,8.421573 h -20" />
+						<path class="line middle" d="m 30,50 h 40" />
+						<path class="line bottom" d="m 70,67 h -40 c 0,0 -7.5,-0.802118 -7.5,-8.365747 0,-7.563629 7.5,-8.634253 7.5,-8.634253 h 20" />
+					</svg>
+				</div>
+				<h1><a href="/">T-port</a></h1>
+			</div>
+			<div class="navigation-bar">
+				<nav>
+					<a href="/nested/transport" class="nav-item">transport</a>
+					<a href="/nested/stops" class="nav-item">stops</a>
+					<a href="/nested/routes" class="nav-item">routes</a>
+				</nav>
+			</div>
+			<div class="header-buttons">
+				<div class="favorites">
+					<a href="#">
+						<i class="far fa-bookmark"></i>
+					</a>
+				</div>
+				<div class="login">
+					<a href="#">
+						<i class="material-icons login-pic">exit_to_app</i>
+					</a>
+				</div>
+				<div class="find-pic" onclick="mobileSearch()">
+					<a href="#">
 						<i class="material-icons">search</i>
 					</a>
 				</div>
-			</div>
-			<div class="header-buttons">
-				<div class="day-night-toggle">
-					<div class="button r" id="button-9">
-						<input type="checkbox" class="checkbox">
-						<div class="knobs">
-							<span></span>
-						</div>
-						<div class="layer"></div>
-					</div>
-				</div>
-				<div class="sign-in-button">
-					<a href="#" class="action-button animate blue">
-						<i class="material-icons">
-							perm_identity
-						</i>
-					</a>
+				<div class="find-box">
+					<input type="text" class="find-txt" placeholder="Search..."/>
+					<span class="find-btn">
+						<i class="material-icons">search</i>
+					</span>
 				</div>
 			</div>
 		</div>
     </header>
+	<div class="floating-menu">
+		<nav>
+			<a href="/nested/transport" class="nav-item">transport</a>
+			<a href="/nested/stops" class="nav-item">stops</a>
+			<a href="/nested/routes" class="nav-item">routes</a>
+		</nav>
+	</div>
+	<div class="mobile-find-field">
+		<input type="text" placeholder="Search…">
+		<i class="material-icons close-pic" onclick="mobileSearch()">close</i>
+	</div>
